# camera_drive

./: CMakeLists.txt  README.md  imageinfo.cpp  imageinfo.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylabel.cpp  mylabel.h  sdllabel.cpp  sdllabel.h  utils.cpp  utils.h  voiceinfo.cpp  voiceinfo.h
curl-8.2.1/builds/libcurl-vc17-x64-debug-dll-ipv6-sspi-schannel-obj-lib/: libcurl.res  libcurl_debug.ilk
curl-8.2.1/builds/libcurl-vc17-x64-debug-dll-ipv6-sspi-schannel/lib/: libcurl_debug.exp  libcurl_debug.lib
curl-8.2.1/builds/libcurl-vc17-x64-debug-static-ipv6-sspi-schannel-obj-curl/: curl.res
curl-8.2.1/winbuild/: CURL_OBJS.inc  LIBCURL_OBJS.inc  vc140.idb
